feat: add swagger and Closeaccount feat
