# dto/account.go
@@ -10,16 +10,16 @@ type CreateAccountRequest struct {
 	CitizenID      string  `json:"citizen_id" binding:"required,len=13" example:"1234567890123"`
 	PhoneNumber    string  `json:"phone_number" binding:"required" example:"0812345678"`
 	AccountType    string  `json:"account_type" binding:"required,oneof=SAVING CURRENT" example:"SAVING"`
-	InitialBalance float64 `json:"initial_balance" binding:"required,gt=0" example:"1000.00"`
+	InitialBalance float64 `json:"initial_balance" binding:"gte=0" example:"1000.00"`
 }
 
 // Response DTOs
 type AccountResponse struct {
-	AccountNumber string `json:"account_number" `
-	OwnerName     string `json:"owner_name" example:"John Doe"`
-	AccountType string  `json:"account_type" example:"SAVING"`
-	Balance     float64 `json:"balance" example:"1000.00"`
-	Status      string  `json:"status" example:"ACTIVE"`
+	AccountNumber string  `json:"account_number" `
+	OwnerName     string  `json:"owner_name" example:"John Doe"`
+	AccountType   string  `json:"account_type" example:"SAVING"`
+	Balance       float64 `json:"balance" example:"1000.00"`
+	Status        string  `json:"status" example:"ACTIVE"`
 }
 
 type AccountListResponse []AccountResponse
@@ -31,11 +31,11 @@ type AccountDeleteResponse struct {
 // Mapper functions
 func ToAccountResponse(m *models.Account) *AccountResponse {
 	return &AccountResponse{
-		AccountNumber : m.AccountNumber,
-		OwnerName:   m.OwnerName,
-		AccountType: m.AccountType,
-		Balance:     m.Balance,
-		Status:      m.Status,
+		AccountNumber: m.AccountNumber,
+		OwnerName:     m.OwnerName,
+		AccountType:   m.AccountType,
+		Balance:       m.Balance,
+		Status:        m.Status,
 	}
 }
 
@@ -45,4 +45,16 @@ func ToAccountListResponse(accounts []models.Account) AccountListResponse {
 		list = append(list, *ToAccountResponse(&a))
 	}
 	return list
+}
+
+type CloseAccountResponse struct {
+	AccountNumber string `json:"account_number"`
+	Status        string `json:"status"`
+}
+
+func ToCloseAccountResponse(m *models.Account) *CloseAccountResponse {
+	return &CloseAccountResponse{
+		AccountNumber: m.AccountNumber,
+		Status:        m.Status,
+	}
 }
